@@ -7,7 +7,6 @@ import com.amazonaws.athena.connector.lambda.data.writers.GeneratedRowWriter;
 import com.amazonaws.athena.connector.lambda.data.writers.extractors.*;
 import com.amazonaws.athena.connector.lambda.data.writers.holders.NullableVarBinaryHolder;
 import com.amazonaws.athena.connector.lambda.data.writers.holders.NullableVarCharHolder;
-import com.amazonaws.athena.connector.lambda.data.writers.holders.NullableFixedSizeBinaryHolder;
 import com.amazonaws.athena.connector.lambda.domain.Split;
 import com.amazonaws.athena.connector.lambda.domain.TableName;
 import com.amazonaws.athena.connector.lambda.domain.predicate.Constraints;
@@ -16,12 +15,14 @@ import com.amazonaws.athena.connector.lambda.records.ReadRecordsRequest;
 import com.amazonaws.connectors.athena.cassandra.connection.CassandraSessionConfig;
 import com.amazonaws.connectors.athena.cassandra.connection.CassandraSessionFactory;
 import com.amazonaws.connectors.athena.cassandra.connection.CassandraSplitQueryBuilder;
-import com.amazonaws.athena.connector.lambda.data.writers.extractors.FixedSizeBinaryExtractor;
 import com.amazonaws.services.athena.AmazonAthena;
 import com.amazonaws.services.s3.AmazonS3;
 import com.amazonaws.services.secretsmanager.AWSSecretsManager;
 import com.datastax.oss.driver.api.core.CqlSession;
-import com.datastax.oss.driver.api.core.cql.*;
+import com.datastax.oss.driver.api.core.cql.ColumnDefinition;
+import com.datastax.oss.driver.api.core.cql.ResultSet;
+import com.datastax.oss.driver.api.core.cql.Row;
+import com.datastax.oss.driver.api.core.cql.Statement;
 import com.datastax.oss.driver.api.core.type.DataTypes;
 import org.apache.arrow.util.VisibleForTesting;
 import org.apache.arrow.vector.holders.*;
@@ -31,12 +32,12 @@ import org.apache.arrow.vector.types.pojo.Schema;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-
 import java.time.ZoneOffset;
-import java.util.*;
+import java.util.Map;
 
 public class CassandraRecordHandler
-        extends RecordHandler {
+        extends RecordHandler
+{
 
     private static final Logger logger = LoggerFactory.getLogger(CassandraRecordHandler.class);
     private static final String sourceType = "cassandra";
@@ -49,15 +50,15 @@ public class CassandraRecordHandler
 
     public static final org.joda.time.MutableDateTime EPOCH = new org.joda.time.MutableDateTime();
 
-    public CassandraRecordHandler() {
+    public CassandraRecordHandler()
+    {
         super(sourceType);
         /** todo: how to input connection config?
          * Initiates a connection to the session specified by the application.conf.
          */
-        this.cassandraSessionFactory = CassandraSessionFactory.getDefaultSessionFactory();
-        this.cassandraSessionConfig = CassandraSessionConfig.getDefaultSessionConfig();
-        this.cassandraSplitQueryBuilder = new CassandraSplitQueryBuilder();
-
+        cassandraSessionFactory = CassandraSessionFactory.getDefaultSessionFactory();
+        cassandraSessionConfig = CassandraSessionConfig.getDefaultSessionConfig();
+        cassandraSplitQueryBuilder = new CassandraSplitQueryBuilder();
     }
 
     @VisibleForTesting
@@ -67,72 +68,76 @@ public class CassandraRecordHandler
                                   final AmazonAthena athena,
                                   final String sourceType,
                                   final CassandraSessionFactory cassandraSessionFactory,
-                                  final CassandraSessionConfig cassandraSessionConfig) {
+                                  final CassandraSessionConfig cassandraSessionConfig)
+    {
 
         super(amazonS3, secretsManager, athena, sourceType);
         this.cassandraSessionFactory = cassandraSessionFactory;
         this.cassandraSessionConfig = cassandraSessionConfig;
-        this.cassandraSplitQueryBuilder = new CassandraSplitQueryBuilder();
+        cassandraSplitQueryBuilder = new CassandraSplitQueryBuilder();
     }
 
     @VisibleForTesting
-    public CassandraRecordHandler(CqlSession cqlSession, AmazonS3 amazonS3, AWSSecretsManager secretsManager, AmazonAthena athena) {
+    public CassandraRecordHandler(CqlSession cqlSession,
+                                  AmazonS3 amazonS3,
+                                  AWSSecretsManager secretsManager,
+                                  AmazonAthena athena)
+    {
         this(cqlSession,
-                amazonS3,
-                secretsManager,
-                athena,
-                sourceType,
-                CassandraSessionFactory.getDefaultSessionFactory(),
-                CassandraSessionConfig.getDefaultSessionConfig());
+             amazonS3,
+             secretsManager,
+             athena,
+             sourceType,
+             CassandraSessionFactory.getDefaultSessionFactory(),
+             CassandraSessionConfig.getDefaultSessionConfig());
     }
 
     // todo do I need a ThrottlingInvoker.ExceptionFilter?
 
     @Override
-    protected void readWithConstraint(BlockSpiller blockSpiller, ReadRecordsRequest readRecordsRequest, QueryStatusChecker queryStatusChecker) throws Exception {
-        {
+    protected void readWithConstraint(BlockSpiller blockSpiller, ReadRecordsRequest readRecordsRequest,
+                                      QueryStatusChecker queryStatusChecker) throws Exception
+    {
 
-            logger.info("{}: Catalog: {}, table {}, splits {}", readRecordsRequest.getQueryId(), readRecordsRequest.getCatalogName(), readRecordsRequest.getTableName(),
+        logger.info("{}: Catalog: {}, table {}, splits {}", readRecordsRequest.getQueryId(),
+                    readRecordsRequest.getCatalogName(), readRecordsRequest.getTableName(),
                     readRecordsRequest.getSplit().getProperties());
-            try (CqlSession cassandraCqlSession = this.cassandraSessionFactory.getSession()) {
+        try (CqlSession cassandraCqlSession = cassandraSessionFactory.getSession()) {
 
-                // connection.setAutoCommit(false); // For consistency. This is needed to be false to enable streaming for some database types.
-                try {
+            try {
+                Statement statement = buildSplitSql(cassandraCqlSession, readRecordsRequest.getCatalogName(),
+                                                    readRecordsRequest.getTableName(),
+                                                    readRecordsRequest.getSchema(),
+                                                    readRecordsRequest.getConstraints(),
+                                                    readRecordsRequest.getSplit());
 
+                ResultSet resultSet = cassandraCqlSession.execute(statement);
 
-                    Statement statement = buildSplitSql(cassandraCqlSession, readRecordsRequest.getCatalogName(), readRecordsRequest.getTableName(),
-                            readRecordsRequest.getSchema(), readRecordsRequest.getConstraints(), readRecordsRequest.getSplit());
+                Map<String, String> partitionValues = readRecordsRequest.getSplit().getProperties();
 
-                    ResultSet resultSet = cassandraCqlSession.execute(statement);
-
-                    Map<String, String> partitionValues = readRecordsRequest.getSplit().getProperties();
-
-                    GeneratedRowWriter.RowWriterBuilder rowWriterBuilder = GeneratedRowWriter.newBuilder(readRecordsRequest.getConstraints());
-                    for (Field next : readRecordsRequest.getSchema().getFields()) {
-                        // use first row in resultSet to make extractors
-                        Extractor extractor = makeExtractor(next, resultSet.one(), partitionValues);
-                        rowWriterBuilder.withExtractor(next.getName(), extractor);
-                    }
-
-                    GeneratedRowWriter rowWriter = rowWriterBuilder.build();
-                    int rowsReturnedFromDatabase = 0;
-
-                    Iterator<Row> rows = resultSet.iterator();
-
-                    while (rows.hasNext()) {
-                        if (!queryStatusChecker.isQueryRunning()) {
-                            return;
-                        }
-                        blockSpiller.writeRows((Block block, int rowNum) -> rowWriter.writeRow(block, rowNum, rows.next()) ? 1 : 0);
-                        rowsReturnedFromDatabase++;
-                    }
-                    logger.info("{} rows returned by database.", rowsReturnedFromDatabase);
-
-
-                } catch (Exception e) {
-                    throw new RuntimeException(e.getMessage(), e);
+                GeneratedRowWriter.RowWriterBuilder rowWriterBuilder = GeneratedRowWriter.newBuilder(
+                        readRecordsRequest.getConstraints());
+                for (Field next : readRecordsRequest.getSchema().getFields()) {
+                    // use first row in resultSet to make extractors
+                    Extractor extractor = makeExtractor(next, resultSet.one(), partitionValues);
+                    rowWriterBuilder.withExtractor(next.getName(), extractor);
                 }
 
+                GeneratedRowWriter rowWriter = rowWriterBuilder.build();
+                int rowsReturnedFromDatabase = 0;
+
+                for (Row row : resultSet) {
+                    if (!queryStatusChecker.isQueryRunning()) {
+                        return;
+                    }
+                    blockSpiller.writeRows(
+                            (Block block, int rowNum) -> rowWriter.writeRow(block, rowNum, row) ? 1 : 0);
+                    rowsReturnedFromDatabase++;
+                }
+                logger.info("{} rows returned by database.", rowsReturnedFromDatabase);
+            }
+            catch (Exception e) {
+                throw new RuntimeException(e.getMessage(), e);
             }
         }
     }
@@ -141,7 +146,8 @@ public class CassandraRecordHandler
      * Borrowed From : <code>JdbcRecordHandler</code>
      * Creates an Extractor for the given field. In this example the extractor just creates some random data.
      */
-    private Extractor makeExtractor(Field field, Row row, Map<String, String> partitionValues) {
+    private Extractor makeExtractor(Field field, Row row, Map<String, String> partitionValues)
+    {
 
         // why get the MinorType?
         Types.MinorType fieldType = Types.getMinorTypeForArrowType(field.getType());
@@ -222,7 +228,7 @@ public class CassandraRecordHandler
                 return (DateDayExtractor) (Object context, NullableDateDayHolder dst) ->
                 {
                     if (row.getLocalDate(fieldName) != null) {
-                        dst.value = new Long(row.getLocalDate(fieldName).toEpochDay()).intValue();
+                        dst.value = Long.valueOf(row.getLocalDate(fieldName).toEpochDay()).intValue();
                     }
                     dst.isSet = row.isNull(fieldName) ? 0 : 1;
                 };
@@ -238,18 +244,17 @@ public class CassandraRecordHandler
             case VARCHAR:
                 return (VarCharExtractor) (Object context, NullableVarCharHolder dst) ->
                 {
-                        dst.value = row.getString(fieldName);
-                        dst.isSet = row.isNull(fieldName) ? 0 : 1;
+                    dst.value = row.getString(fieldName);
+                    dst.isSet = row.isNull(fieldName) ? 0 : 1;
                 };
             case VARBINARY:
                 return (VarBinaryExtractor) (Object context, NullableVarBinaryHolder dst) ->
                 {
                     ColumnDefinition colDef = row.getColumnDefinitions().get(fieldName);
-                    if(colDef.getType().getProtocolCode() ==  DataTypes.UUID.getProtocolCode()) {
+                    if (colDef.getType().getProtocolCode() == DataTypes.UUID.getProtocolCode()) {
                         dst.value = row.getUuid(fieldName).toString().getBytes();
                         dst.isSet = row.isNull(fieldName) ? 0 : 1;
-                    }
-                    else {
+                    } else {
                         dst.value = row.getByteBuffer(fieldName).array();
                         dst.isSet = row.isNull(fieldName) ? 0 : 1;
                     }
@@ -268,12 +273,13 @@ public class CassandraRecordHandler
         }
     }
 
-
-    public Statement buildSplitSql(CqlSession cqlSession, String catalogName, TableName tableName, Schema schema, Constraints constraints, Split split) {
-        Statement statement = cassandraSplitQueryBuilder.buildSql(cqlSession, null, tableName.getSchemaName(), tableName.getTableName(), schema, constraints, split);
+    public Statement buildSplitSql(CqlSession cqlSession, String catalogName, TableName tableName, Schema schema,
+                                   Constraints constraints, Split split)
+    {
+        Statement statement = cassandraSplitQueryBuilder.buildSql(cqlSession, null, tableName.getSchemaName(),
+                                                                  tableName.getTableName(), schema, constraints, split);
         // todo - what should the pageSize be?
         statement.setPageSize(1000);
         return statement;
     }
-
 }
